--- a/ai_intro_00.ipynb
+++ b/ai_intro_00.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8ObZIW8/PA7CJlhOewOLQ",
+      "authorship_tag": "ABX9TyPui+8aQCoZTBJlvOoiqhLD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Build a daily devotional or daily office style web application using excerpt's from Alexander Pope's translation of The Iliad"
+      ],
+      "metadata": {
+        "id": "8FUxKvFGlwx9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "88CZW32TgMha"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\"Vibe code\" a web application to analyze the Forsyth County 2026 Budget"
       ],
       "metadata": {
@@ -48,7 +66,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "88CZW32TgMha"
+        "id": "0Q1HrmHFlx5p"
       },
       "execution_count": null,
       "outputs": []
