--- a/ai_intro_00.ipynb
+++ b/ai_intro_00.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPui+8aQCoZTBJlvOoiqhLD",
+      "authorship_tag": "ABX9TyNq75eBhnHbtth+DsXoN5L3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,20 +29,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Build a daily devotional or daily office style web application using excerpt's from Alexander Pope's translation of The Iliad"
+        "# Go To https://aistudio.google.com/"
+      ],
+      "metadata": {
+        "id": "KVjb1dE-yqkQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Your mission:\n",
+        "\n",
+        "#### Build a daily devotional or daily office style web application using excerpt's from Alexander Pope's translation of The Iliad"
       ],
       "metadata": {
         "id": "8FUxKvFGlwx9"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## If you finish that, try something else, e.g."
+      ],
       "metadata": {
-        "id": "88CZW32TgMha"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "DxxHUD93y0IP"
+      }
     },
     {
       "cell_type": "markdown",
@@ -67,6 +78,15 @@
       "source": [],
       "metadata": {
         "id": "0Q1HrmHFlx5p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cgI9YizUy6M7"
       },
       "execution_count": null,
       "outputs": []
